<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
            app:iconGravity="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:weightSum="5"
            app:layout_constraintTop_toBottomOf="@id/btn_back">

            <TextView
                android:id="@+id/tv_rank_header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rank"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.75"
                android:gravity="center"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.25"
                android:gravity="center"
                android:text="@string/score"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scores_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:reverseLayout="false"
            tools:itemCount="5"
            tools:listitem="@layout/row_scores" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>